--- a/khan-exercises/exercises/new_definitions_1.html
+++ b/khan-exercises/exercises/new_definitions_1.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math word-problems expressions">
 <head>
     <meta charset="UTF-8" />
-    <title>New definitions 1</title>
+    <title>Nieuwe definities 1</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
