--- a/khan-exercises/exercises/functions_1.html
+++ b/khan-exercises/exercises/functions_1.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie">
 <head>
     <meta charset="UTF-8" />
-    <title>Functions 1</title>
+    <title>Functies 1</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
