--- a/khan-exercises/exercises/functions_2.html
+++ b/khan-exercises/exercises/functions_2.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie">
 <head>
     <meta charset="UTF-8" />
-    <title>Functions 2</title>
+    <title>Functies 2</title>
     <script src="../khan-exercise.js"></script>
 
     <style>
