--- a/khan-exercises/exercises/domain_and_range_0.5.html
+++ b/khan-exercises/exercises/domain_and_range_0.5.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie interactive">
 <head>
     <meta charset="UTF-8" />
-    <title>Domain and range of a function 0.5</title>
+    <title>Domein en bereik van een functie 0.5</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
