--- a/khan-exercises/exercises/functions_3.html
+++ b/khan-exercises/exercises/functions_3.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math polynomials expressions">
 <head>
     <meta charset="UTF-8" />
-    <title>Functions 3</title>
+    <title>Functies 3</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
