--- a/javascript/shared-package/hover-card-test.html
+++ b/javascript/shared-package/hover-card-test.html
@@ -18,7 +18,7 @@ var SAMPLE_PROFILE_DATA = {
     "points": 10000,
     "publicBadges": [{
         "badgeCategory": 0,
-        "description": "Picking Up Steam",
+        "description": "De vaart erin",
         "hideContext": false,
         "iconSrc": "/images/badges/meteorite-small.png",
         "icons": {
@@ -29,11 +29,11 @@ var SAMPLE_PROFILE_DATA = {
         "isOwned": true,
         "name": "nicetimedproblembadge",
         "points": 100,
-        "safeExtendedDescription": "Quickly & correctly answer 5 skill problems in a row (time limit depends on skill difficulty)"
+        "safeExtendedDescription": "Beantwoord snel & correct 5 vaardigheden problemen achter elkaar (tijdslimiet hangt af van de moeilijkheidsgraad)"
     },
     {
         "badgeCategory": 0,
-        "description": "Just Getting Started",
+        "description": "Net begonnen",
         "hideContext": false,
         "iconSrc": "/images/badges/meteorite-small.png",
         "icons": {
@@ -44,7 +44,7 @@ var SAMPLE_PROFILE_DATA = {
         "isOwned": true,
         "name": "gettingstartedbadge",
         "points": 100,
-        "safeExtendedDescription": "Achieve proficiency in any 3 skills"
+        "safeExtendedDescription": "Word behendig in 3 willekeurige vaardigheden"
     },
     {
         "badgeCategory": 3,
@@ -60,7 +60,7 @@ var SAMPLE_PROFILE_DATA = {
         "isOwned": true,
         "name": "FullTimer",
         "points": 0,
-        "safeExtendedDescription": "Become a full-time member of the Khan Academy team"
+        "safeExtendedDescription": "Word een Full-time medewerker bij de Khan Academie."
     }]
 };
 
