--- a/khan-exercises/exercises/line_relationships.html
+++ b/khan-exercises/exercises/line_relationships.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format expressions graphie">
 <head>
     <meta charset="UTF-8" />
-    <title>Line relationships</title>
+    <title>Relaties tussen lijnen</title>
     <script src="../khan-exercise.js"></script>
     <style type="text/css">
         #answer_area input[type=text] {
@@ -27,7 +27,7 @@
                     <var id="LINE_TYPE">"perpendicular"</var>
                 </div>
                 <div class="question">
-                    <p data-tt="question1" ><b>Find the slope and y-intercept of the line that is <code>\color{<var>GREEN</var>}{\text{<var>LINE_TYPE</var>}}</code> to <code>\enspace \color{<var>BLUE</var>}{y = <span data-if="abs( M_FRAC ) !== 1"><var>M_FRAC</var></span><span data-else><var>M_SIGN</var></span>x <span data-if="B !== 0">+ <var>B</var></span>}\enspace</code> and passes through the point <code>\color{red}{(<var>X</var>, <var>Y</var>)}</code>.</b></p>
+                    <p data-tt="question1" ><b>Wat is de helling en de y-startwaarde van de lijn <code>\color{<var>GREEN</var>}{\text{<var>LINE_TYPE</var>}}</code> die loodrecht staat op <code>\enspace \color{<var>BLUE</var>}{y = <span data-if="abs( M_FRAC ) !== 1"><var>M_FRAC</var></span><span data-else><var>M_SIGN</var></span>x <span data-if="B !== 0">+ <var>B</var></span>}\enspace</code> en door het punt <code>\color{red}{(<var>X</var>, <var>Y</var>)}</code> gaat.</b></p>
                     <div class="graphie" id="grid">
                             graphInit({
                                 range: [[-10, 10], [-10, 10]],
@@ -57,13 +57,13 @@
                     <p><code>b</code> = <span class="sol"><var>Y - ( -1 / M * X )</var></span></p>
                 </div>
                 <div class="hints">
-                    <p data-tt="hint1" >Lines are considered perpendicular if their slopes are negative reciprocals of each other. 
+                    <p data-tt="hint1" >Lijnen staan loodrecht op elkaar als de hellingen elkaars negatieve wederkerige zijn., </p> 
                     <div>
-                        <p data-tt="hint2" >The slope of the blue line is <code>\color{<var>BLUE</var>}{<var>M_FRAC</var>}</code>, and its negative reciprocal is <code>\color{<var>GREEN</var>}{<var>M_PERP_FRAC</var>}</code>.</p>
-                        <p data-tt="hint3" >Thus, the equation of our perpendicular line will be of the form <code>\enspace \color{<var>GREEN</var>}{y = <span data-if="abs( M_PERP_FRAC ) !== 1"><var>M_PERP_FRAC</var></span><span data-else><var>M_PERP_SIGN</var></span>x + b}\enspace</code>.</p>
+                        <p data-tt="hint2" >De helling van de blauwe lijn is <code>\color{<var>BLUE</var>}{<var>M_FRAC</var>}</code>, en de negatieve wederkerige is <code>\color{<var>GREEN</var>}{<var>M_PERP_FRAC</var>}</code>.</p>
+                        <p data-tt="hint3" >Dus de vergelijking van onze loodrechte lijn is van de vorm <code>\enspace \color{<var>GREEN</var>}{y = <span data-if="abs( M_PERP_FRAC ) !== 1"><var>M_PERP_FRAC</var></span><span data-else><var>M_PERP_SIGN</var></span>x + b}\enspace</code>.</p>
                     </div>
                     <div>
-                        <p data-tt="hint4" >We can plug our point, <code>(<var>X</var>, <var>Y</var>)</code>, into this equation to solve for <code>\color{<var>GREEN</var>}{b}</code>, the y-intercept.</p>
+                        <p data-tt="hint4" >We kunnen de coordinaten van ons punt, <code>(<var>X</var>, <var>Y</var>)</code>, in deze vergelijking stoppen om de waarde <code>\color{<var>GREEN</var>}{b}</code>, de y-startwaarde, uit te rekenen.</p>
                         <p data-if="M !== -1"><code><var>Y</var> = \color{<var>GREEN</var>}{<span data-if="abs( M_PERP_FRAC ) !== 1"><var>M_PERP_FRAC</var></span><span data-else><var>M_PERP_SIGN</var></span>}(<var>X</var>) + \color{<var>GREEN</var>}{b}</code></p>
                     </div>
                     <div>
@@ -71,7 +71,7 @@
                         <p><code><var>Y</var> - <var>decimalFraction( -1 / M * X, "true", "true" )</var> = \color{<var>GREEN</var>}{b} = <var>decimalFraction( Y - ( -1 / M * X ), "true", "true" )</var></code></p>
                     </div>
                     <div>
-                        <p data-tt="hint5" >The equation of the perpendicular line is <code>\enspace \color{<var>GREEN</var>}{y = <span data-if="abs( M_PERP_FRAC ) !== 1"><var>M_PERP_FRAC</var></span><span data-else><var>M_PERP_SIGN</var></span>x<span data-if="Y - ( -1 / M * X ) !== 0"> + <var>decimalFraction( Y - ( -1 / M * X ), "true", "true" )</var></span>}\enspace</code>.</p>
+                        <p data-tt="hint5" >De vergelijking van de loodrechte lijn is <code>\enspace \color{<var>GREEN</var>}{y = <span data-if="abs( M_PERP_FRAC ) !== 1"><var>M_PERP_FRAC</var></span><span data-else><var>M_PERP_SIGN</var></span>x<span data-if="Y - ( -1 / M * X ) !== 0"> + <var>decimalFraction( Y - ( -1 / M * X ), "true", "true" )</var></span>}\enspace</code>.</p>
                         <p><code>\color{<var>GREEN</var>}{m = <var>decimalFraction( -1 / M, "true", "true" )</var>, \enspace b = <var>decimalFraction( Y - ( -1 / M * X ), "true", "true" )</var>}</code></p>
                         <div class="graphie" data-update="grid">
                             plot(function( x ) {
@@ -85,7 +85,7 @@
             </div>
             <div id="parallel-graph" data-type="perpendicular-graph" data-weight="2">
                 <div class="vars">
-                    <var id="LINE_TYPE">"parallel"</var>
+                    <var id="LINE_TYPE">"Evenwijdig"</var>
                     <var id="X" data-ensure="abs( M * X ) &lt;= 12">randRange( 2, 8 ) * randRangeNonZero( -1, 1 )</var>
                     <var id="Y" data-ensure="abs( Y - M * X ) &lt; 10 && abs( Y - M * X - B ) &gt;= 1">randRange( 2, 8 ) * randRangeNonZero( -1, 1 )</var>
                 </div>
@@ -95,11 +95,11 @@
                 </div>
                 <div class="hints">
                     <div>    
-                        <p data-tt="hint6" >Parallel lines have the same slope.</p>
-                        <p data-tt="hint7" >The slope of the blue line is <code>\color{<var>BLUE</var>}{<var>M_FRAC</var>}</code>, so the equation of our parallel line will be of the form <code>\enspace \color{<var>GREEN</var>}{y = <span data-if="abs( M_FRAC ) !== 1"><var>M_FRAC</var></span><span data-else><var>M_SIGN</var></span>x + b}\enspace</code>.</p>
+                        <p data-tt="hint6" >Evenwijdige lijnen hebben dezelfde helling..</p>
+                        <p data-tt="hint7" >De helling van de blauwe lijn is <code>\color{<var>BLUE</var>}{<var>M_FRAC</var>}</code>, dus de vergelijking voor de parallel lijn zal van de vorm <code>\enspace \color{<var>GREEN</var>}{y = <span data-if="abs( M_FRAC ) !== 1"><var>M_FRAC</var></span><span data-else><var>M_SIGN</var></span>x + b}\enspace</code> zijn.</p>
                     </div>
                     <div>
-                        <p data-tt="hint8" >We can plug our point, <code>(<var>X</var>, <var>Y</var>)</code>, into this equation to solve for <code>\color{<var>GREEN</var>}{b}</code>, the y-intercept.</p>
+                        <p data-tt="hint8" >We kunnen de waarden van ons punt, <code>(<var>X</var>, <var>Y</var>)</code>, in deze vergelijking stoppen om de <code>\color{<var>GREEN</var>}{b}</code>, de y-startwaarde, te vinden.</p>
                         <p data-if="M !== 1"><code><var>Y</var> = \color{<var>GREEN</var>}{<span data-if="abs( M_FRAC ) !== 1"><var>M_FRAC</var></span><span data-else><var>M_SIGN</var></span>}(<var>X</var>) + \color{<var>GREEN</var>}{b}</code></p>
                     </div>
                     <div>
@@ -107,7 +107,7 @@
                         <p><code><var>Y</var> - <var>decimalFraction( M * X, "true", "true" )</var> = \color{<var>GREEN</var>}{b} = <var>decimalFraction( Y - M * X, "true", "true" )</var></code></p>
                     </div>
                     <div>
-                        <p data-tt="hint9" >The equation of the parallel line is <code>\enspace \color{<var>GREEN</var>}{y = <span data-if="abs( M_FRAC ) !== 1"><var>M_FRAC</var></span><span data-else><var>M_SIGN</var></span>x<span data-if="Y - ( M * X ) !== 0"> + <var>decimalFraction( Y - M * X, "true", "true" )</var>}</span>\enspace</code>.</p>
+                        <p data-tt="hint9" >De vergelijking voor de evenwijdige lijn is: <code>\enspace \color{<var>GREEN</var>}{y = <span data-if="abs( M_FRAC ) !== 1"><var>M_FRAC</var></span><span data-else><var>M_SIGN</var></span>x<span data-if="Y - ( M * X ) !== 0"> + <var>decimalFraction( Y - M * X, "true", "true" )</var>}</span>\enspace</code>.</p>
                         <p><code>\color{<var>GREEN</var>}{m = <var>decimalFraction( M, "true", "true" )</var>, \enspace b = <var>decimalFraction( Y - M * X, "true", "true" )</var>}</code></p>
                         <div class="graphie" data-update="grid">
                             plot(function( x ) {
@@ -133,16 +133,16 @@
                     <var id="EQ2">expr(["+", ["*", A2, "x"], ["*", B2, "y"]]) + " = " + C2</var>
                 </div>
                 <div class="question">
-                    <p data-tt="question2" >What do the following two equations represent?</p>
+                    <p data-tt="question2" >Wat stellen de volgende twee vergelijkingen voor?</p>
                     <p><code><var>EQ1</var></code></p>
                     <p><code><var>EQ2</var></code></p>
                 </div>
-                <div class="solution">Equivalent lines</div>
+                <div class="solution">Gelijke lijnen</div>
                 <ul class="choices" data-category="true">
-                    <li data-tt="list1" >Equivalent lines</li>
-                    <li data-tt="list2" >Parallel lines</li>
-                    <li data-tt="list3" >Perpendicular lines</li>
-                    <li data-tt="list4" >None of the above</li>
+                    <li data-tt="list1" >Gelijke lijnen</li>
+                    <li data-tt="list2" >Evenwijdige lijnen</li>
+                    <li data-tt="list3" >Loodrechte lijnen</li>
+                    <li data-tt="list4" >Geen van allen</li>
                 </ul>
                 <div class="hints">
                     <div>
@@ -173,7 +173,7 @@
                                 return ( C1 / B1 ) - ( A1 / B1 ) * x;
                             }, [-10, 10]);
                         </div>
-                        <p data-tt="hint10" >Putting the first equation in <code>y = mx + b</code> form gives:</p>
+                        <p data-tt="hint10" >De eerste vergelijking in de vorm <code>y = mx + b</code> luidt:</p>
                         <p><code><var>expr(["+", ["*", A1, "x"], ["*", B1, "y"]]) + " = " + C1</var></code></p>
                         <p><code><var>expr(["*", B1, "y"]) + " = " + expr(["+", ["*", (-1 * A1), "x"], C1])</var></code></p>
                         <p data-if="B1 !== 1"><code><var>"y = " + fractionReduce( -A1, B1 ) + "x + " + fractionReduce( C1, B1 )</var></code></p>
@@ -184,7 +184,7 @@
                                 return ( C2 / B2 ) - ( A2 / B2 ) * x;
                             }, [-10, 10]);
                         </div>
-                        <p data-tt="hint11" >Putting the second equation in <code>y = mx + b</code> form gives:</p>
+                        <p data-tt="hint11" >De tweede vergelijking in de vorm <code>y = mx + b</code> luidt:</p>
                         <p><code><var>expr(["+", ["*", A2, "x"], ["*", B2, "y"]]) + " = " + C2</var></code></p>
                         <p><code><var>expr(["*", B2, "y"]) + " = " + expr(["+", ["*", (-1 * A2), "x"], C2])</var></code></p>
                         <p data-if="B2 !== 1"><code><var>"y = " + fractionReduce( -A2, B2 ) + "x + " + fractionReduce( C2, B2 )</var></code></p>
@@ -203,9 +203,9 @@
                     <var id="EQ1">expr(["+", ["*", A1, "x"], ["*", B1, "y"]]) + " = " + C1</var>
                     <var id="EQ2">expr(["+", ["*", A2, "x"], ["*", B2, "y"]]) + " = " + C2</var>
                 </div>
-                <div class="solution">None of the above</div>
+                <div class="solution">Geen van allen.</div>
                 <div class="hints" data-apply="appendContents">
-                    <p data-tt="hint12" >The slopes are not the same, so the lines are not equivalent or parallel. The slopes are not negative inverses of each other, so the lines are not perpendicular. The correct answer is none of the above.</p>
+                    <p data-tt="hint12" >De hellingen zijn niet gelijk, dus de lijnen zijn niet gelijk of evenwijdig. De hellingen zijn niet elkaars negatieve omgekeerden, dus de lijnen staan niet loodrecht op elkaar. Het juiste antwoord is: "Geen van allen".</p>
                 </div>
             </div>
             
@@ -221,9 +221,9 @@
                     <var id="EQ1">expr(["+", ["*", A1, "x"], ["*", B1, "y"]]) + " = " + C1</var>
                     <var id="EQ2">expr(["+", ["*", A2, "x"], ["*", B2, "y"]]) + " = " + C2</var>
                 </div>
-                <div class="solution">Equivalent lines</div>
+                <div class="solution">Gelijke lijnen</div>
                 <div class="hints" data-apply="appendContents">
-                    <p  data-tt="hint13" >The above equations turn into the same equation, so they represent equivalent lines.</p>
+                    <p  data-tt="hint13" >De bovenstaande vergelijkingen veranderen in dezelfde vergelijking, dus ze representeren gelijke lijnen.</p>
                 </div>
             </div>
 
@@ -239,9 +239,9 @@
                     <var id="EQ1">expr(["+", ["*", A1, "x"], ["*", B1, "y"]]) + " = " + C1</var>
                     <var id="EQ2">expr(["+", ["*", A2, "x"], ["*", B2, "y"]]) + " = " + C2</var>
                 </div>
-                <div class="solution">Parallel lines</div>
+                <div class="solution">Evenwijdige lijnen</div>
                 <div class="hints" data-apply="appendContents">
-                    <p data-tt="hint14" >The slopes are equal, and the y-intercepts are different, so the lines are parallel.</p>
+                    <p data-tt="hint14" >De hellingen zijn gelijk, en de y-startwaardes zijn anders, dus de lijnen zijn evenwijdig.</p>
                 </div>
             </div>
 
@@ -257,9 +257,9 @@
                     <var id="EQ1">expr(["+", ["*", A1, "x"], ["*", B1, "y"]]) + " = " + C1</var>
                     <var id="EQ2">expr(["+", ["*", A2, "x"], ["*", B2, "y"]]) + " = " + C2</var>
                 </div>
-                <div class="solution">Perpendicular lines</div>
+                <div class="solution">Loodrechte lijnen</div>
                 <div class="hints" data-apply="appendContents">
-                    <p data-tt="hint15" >The slopes are negative inverses of each other, so the lines are perpendicular.</p>
+                    <p data-tt="hint15" >De hellingen zijn elkaars negatieve wederkerige, dus de lijnen staan loodrecht op elkaar. </p>
                 </div>
             </div>
         </div>
